--- a/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.css
@@ -264,4 +264,8 @@
         display: none;
         /* Remove separator line on very small screens */
     }
+
+    .label-container:hover {
+        width: 100%;
+    }
 }
