VQ-1984, VQ-1985, VQ-1986/Members and Category details popups

--- a/src/app/features/lms/grp/components/dashboard/components/admin-policy-details/admin-policy-details.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-policy-details/admin-policy-details.component.css
@@ -91,6 +91,89 @@ td:first-child {
   .table-label-desc {
     color: black;
   }
+  
+  .flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin-bottom: 10px;
+  }
+
+  .pol-dets {
+    flex-grow: 1;
+    font-weight: 500;
+    font-size: 16px;
+  }
+
+  .option-select {
+    flex-shrink: 0;
+  }
+
+  .multiselect-add {
+    position: relative;
+    width: 100%;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+:host ::ng-deep .p-multiselect-label-container {
+    display: none;
+}
+
+:host ::ng-deep .p-multiselect {
+    height: auto;
+}
+
+:host ::ng-deep .p-multiselect-panel {
+    max-height: 300px;
+    max-width: 100%;
+    overflow-y: auto;
+}
+
+:host ::ng-deep .p-multiselect-trigger {
+    width: 20px;
+    height: 20px;
+}
+
+.modal-header,
+ .modal-footer {
+     border: none;
+     /* Removes the border between header/footer and body of modal */
+ }
+
+ .modal-content {
+  padding: 0 40px;
+ }
+
+ /* table {
+  width: 100%;
+  border-collapse: collapse;
+} */
+
+th {
+  text-align: left;
+  padding: 8px;
+  background-color: #BAD0E4;
+  white-space: nowrap;
+}
+
+td {
+  padding: 2px;
+  white-space: nowrap;
+  border: none !important;
+}
+
+tr {
+    border: none !important;
+  }
+
+.selected-row {
+    background-color: #cce5ff !important;
+  }
+  
 
 @media (max-width: 1200px) {
     .box {
