VQ-1976:Pop up to  import schedule details from another policy

--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.css
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.css
@@ -248,3 +248,6 @@
   color: #00529B;
   font-size:14px
 }
+::ng-deep .p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
+  padding: 0.5rem 0.5rem;
+}
