--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -917,8 +917,83 @@
                                         
                                         <div class="modal-body">
                                             <p>Import a Schedule</p>
+                                            <input type="text" class="form-control form-control-sm w-50 mb-4"  placeholder="Search for a policy">
+                                         
+                                                
                                         </div>
-                                      
+                                        <p-table [value]="" dataKey="code" editMode="row" [tableStyle]="{'min-width': '10rem'}"
+                                        selectionMode="single" [(selection)]="selectedSection" styleClass="p-datatable-sm"
+                                        responsiveLayout="scroll" class='ui-datatable mb-4' [autoLayout]="true">
+                                        <ng-template pTemplate="header">
+                                            <tr  style="background-color: #F5F6F8;">
+                                               
+                                                <th style="width:8%">Policy No.</th>
+                                                <th style="width:8%">Endorsement No.</th>
+                                                <th style="width:10%">Product</th>
+                                               
+                                                <!-- <th style="width:7%;"></th> -->  
+                                               
+                                                
+                                            </tr>
+                                        </ng-template>
+                                        <ng-template pTemplate="body" let-premiumList let-editing="editing" let-ri="rowIndex">
+                                            <tr [pEditableRow]="premiumList">
+                                            
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            
+                                            </tr>
+                    
+                    
+                                        </ng-template>
+                                        <ng-template pTemplate="emptymessage">
+                                            <tr>
+                                                <td colspan="9" style="padding: 10px; text-align:center " id="empty"> {{'gis.policy.no_data_to_display' | translate}}
+                                                </td>
+                                            </tr>
+                                        </ng-template>
+                                    </p-table>
+                                    <div class="modal-body">
+                                        <p>Import a Risk</p>
+                                        <input type="text" class="form-control form-control-sm w-50 mb-4"  placeholder="Search for a risk">
+                                     
+                                            
+                                    </div>
+                                    <p-table [value]="" dataKey="code" editMode="row" [tableStyle]="{'min-width': '10rem'}"
+                                    selectionMode="single" [(selection)]="selectedSection" styleClass="p-datatable-sm"
+                                    responsiveLayout="scroll" class='ui-datatable mb-4' [autoLayout]="true">
+                                    <ng-template pTemplate="header">
+                                        <tr  style="background-color: #F5F6F8;">
+                                           
+                                            <th style="width:8%">Select</th>
+                                            <th style="width:8%">Risk Description</th>
+                                            <th style="width:8%">Risk Value</th>
+                                            <th style="width:8%">Subclass</th>
+                                            <!-- <th style="width:7%;"></th> -->  
+                                           
+                                            
+                                        </tr>
+                                    </ng-template>
+                                    <ng-template pTemplate="body" let-premiumList let-editing="editing" let-ri="rowIndex">
+                                        <tr [pEditableRow]="premiumList">
+                                        
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        
+                                        </tr>
+                
+                
+                                    </ng-template>
+                                    <ng-template pTemplate="emptymessage">
+                                        <tr>
+                                            <td colspan="9" style="padding: 10px; text-align:center " id="empty"> {{'gis.policy.no_data_to_display' | translate}}
+                                            </td>
+                                        </tr>
+                                    </ng-template>
+                                </p-table>
                                     </div>
                                     </div>
                                 </div>
