--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -757,7 +757,7 @@
               </div>
             </div>
           </div>
-                <p-table [value]="premiumList" dataKey="code" editMode="row" [tableStyle]="{'min-width': '50rem'}"
+                <p-table *ngIf="!policySectionDetails" [value]="premiumList" dataKey="code" editMode="row" [tableStyle]="{'min-width': '50rem'}"
                     selectionMode="single" [(selection)]="selectedSection" styleClass="p-datatable-sm"
                     responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
                     <ng-template pTemplate="header">
@@ -823,6 +823,118 @@
                                     </ng-template>
                                     <ng-template pTemplate="output">
                                         {{premiumList.rate}}
+                                    </ng-template>
+                                  
+                                </p-cellEditor>
+                            </td>
+                            
+                            <td>{{premiumList.rateType}}</td>
+
+
+
+                            <td>
+                                <!-- <div class="flex align-items-center justify-content-center gap-2">
+                                    <button 
+                                        *ngIf="!editing" 
+                                        pButton 
+                                        pRipple 
+                                        type="button" 
+                                        pInitEditableRow 
+                                        icon="pi pi-pencil" 
+                                         
+                                        class="p-button-rounded p-button-text">
+                                    </button>
+                                    <button 
+                                        *ngIf="editing" 
+                                        pButton 
+                                        pRipple 
+                                        type="button" 
+                                        pSaveEditableRow 
+                                        icon="pi pi-check" 
+                                        
+                                        class="p-button-rounded p-button-text p-button-success mr-2">
+                                    </button>
+                                    <button 
+                                        *ngIf="editing" 
+                                        pButton pRipple 
+                                        type="button" 
+                                        pCancelEditableRow 
+                                        icon="pi pi-times" 
+                                         
+                                        class="p-button-rounded p-button-text p-button-danger">
+                                    </button>
+                                </div> -->
+                                <div class="flex align-items-center justify-content-center gap-2">
+                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                        icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                        icon="pi pi-check"
+                                        class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                        icon="pi pi-times"
+                                        class="p-button-rounded p-button-text p-button-danger"></button>
+                                </div>
+                            </td>
+                        </tr>
+
+
+                    </ng-template>
+                </p-table>
+
+
+                <p-table  *ngIf="policySectionDetails" [value]="policySectionDetails" dataKey="code" editMode="row" [tableStyle]="{'min-width': '50rem'}"
+                    selectionMode="single" [(selection)]="selectedSection" styleClass="p-datatable-sm"
+                    responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th style="width:5%">Select</th>
+                            <th style="width:8%">Group</th>
+                            <th style="width:8%">RowNum</th>
+                            <th style="width:10%">Code</th>
+                            <th style="width:12%">Short Description</th>
+                            <th style="width:10%">Description</th>
+                            <th style="width:8%">Limit Amount</th>
+                            <th style="width:10%">Premium Rate</th>
+                            <th style="width:12%">Rate Type</th>
+                            <!-- <th style="width:7%;"></th> -->
+                           
+                            <!-- <th></th> -->
+                             <!-- <th>Select</th>
+                            <th>Group</th>
+                            <th>RowNum</th>
+                            <th>Code</th>
+                            <th>Short Description</th>
+                            <th>Description</th>
+                            <th>Limit Amount</th>
+                            <th>Premium Rate</th>
+                            <th>Rate Type</th> -->
+                            
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-premiumList let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="premiumList">
+                            <td>
+                                <p-tableCheckbox [value]="selectedSection"></p-tableCheckbox>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td>{{premiumList.sectionCode}}</td>
+                            <td>{{premiumList.sectionShortDesc}}</td>
+                            <td>{{premiumList.sectionDesc}}</td>
+                            <td [pEditableRow]="premiumList.limitAmount" pEditableColumnField="limitAmount">
+                                <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                <input [(ngModel)]="premiumList.limitAmount" class="cellEditorInput" type="text">
+
+                              
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="premiumList.rate"
+                                            class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{premiumList.pilPremRate}}
                                     </ng-template>
                                   
                                 </p-cellEditor>
