VQ-1987-VQ-1990/Pension summary, transactions, members

--- a/src/app/features/lms/grp/components/dashboard/components/admin-claims-listing/admin-claims-listing.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-claims-listing/admin-claims-listing.component.html
@@ -14,7 +14,7 @@
             </p-multiSelect>
         </div>
 
-        <div class="card mt-1">
+        <div>
             <p-table [value]="claimListing" selectionMode="single" dataKey="code" [tableStyle]="{'min-width': '50rem'}"
                 styleClass="p-datatable-striped" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 25, 50]"
                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
